refs #2834. fixed black dot. centered buttons. gap between buttons

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,7 @@
   margin: 0px;
   padding: 0px;
   outline: none;
+  outline-color: #FFF;
   font-family: Arial, Helvetica, sans-serif !important;
 }
 p {
